# rust_model_inferencer_pyo3

./: Cargo.toml  Taskfile.yml  build.rs  pyproject.toml  readme.md  tensorrt_wrapper_v3.cpp
demo/: demo.py  demo_client.py
python/: demo.py  demo_client.py
python/rust_model_inferencer_pyo3/: _native.pyi  wrapper.py
src/: lib.rs  protocol.rs  server.rs  tensor.rs  trt_ffi.rs
