[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust_model_inferencer_pyo3"
description = "Python client for Rust inference server"
requires-python = ">=3.7"
dependencies = ["numpy<2"]
dynamic = ["version"]

[tool.maturin]
module-name = "rust_model_inferencer_pyo3._native"
python-source = "python"
features = ["pyo3/extension-module"]
